--- a/config/database.yml
+++ b/config/database.yml
@@ -18,4 +18,13 @@ test:
 
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  database: edahi_database
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  host: <%= ENV['DB_HOST'] %>
+  port: 5432
+
+  # Configuración específica para Action Cable
+  cable:
+    adapter: redis
+    url: <%= ENV['REDIS_URL'] || 'redis://localhost:6379/1' %>
