--- a/config/render.yml
+++ b/config/render.yml
@@ -1,21 +1,20 @@
 services:
   - type: web
-    name: rails-web
+    name: alpha-blog
     runtime: ruby
-    buildCommand: "./bin/render-build"
-    startCommand: "bundle exec puma -C config/puma.rb"
+    plan: free
+    buildCommand: "./bin/render-build.sh"
+    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
+    startCommand: "./bin/rails server"
     envVars:
-      - key: RAILS_ENV
-        value: production
-      - key: RAILS_MASTER_KEY
-        sync: false
       - key: DATABASE_URL
         fromDatabase:
-          name: railsdb
+          name: mysite-db
           property: connectionString
-
+      - key: RAILS_MASTER_KEY
+        sync: false # You'll provide this value on Blueprint creation
+      - key: WEB_CONCURRENCY
+        value: 2 # Recommended default
 databases:
-  - name: railsdb
-    databaseName: edahi_database
-    user: edahi
-    plan: free # Para empezar
+  - name: mysite-db
+    plan: free
