--- a/config/database.yml
+++ b/config/database.yml
@@ -79,20 +79,9 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: edahi_database
-    username: edahi_database_user
-    password: 3aLcx2nCzizh2nIB68nQ9YrEg1vnv6zq
-  cache:
-    <<: *primary_production
-    database: alpha_blog_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: alpha_blog_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: alpha_blog_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  url: <%= ENV['DATABASE_URL'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  sslmode: require 
