--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,21 @@
 services:
   - type: web
-    name: alpha-blog
+    name: tu-app-rails
     runtime: ruby
-    plan: free
-    buildCommand: "./bin/render-build.sh"
-    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
-    startCommand: "./bin/rails server"
+    buildCommand: "./bin/render-build"
+    startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
+      - key: RAILS_ENV
+        value: production
+      - key: RAILS_MASTER_KEY
+        sync: false  # Usará la variable que configures en Render
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite-db
+          name: edahi_database
           property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false # You'll provide this value on Blueprint creation
-      - key: WEB_CONCURRENCY
-        value: 2 # Recommended default
+
 databases:
-  - name: mysite-db
-    plan: free
+  - name: edahi_database
+    databaseName: edahi_database
+    user: edahi_database_user
+    plan: free  # Para empezar (cambia a paid en producción real)
